<resources>
    <string name="app_name">Cookpad weather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_enabled">LOCATION ENABLED</string>
    <string name="turn_on">TURN ON</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="temperature_units">TEMPERATURE UNITS</string>
    <string name="enter_the_location">Enter the location</string>
</resources>
