<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/temperature_units"
        android:textColor="#FFFFFF"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="20dp"
        android:background="#c0c0c0"/>

    <RadioGroup
        android:id="@+id/tempUnitsRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <RadioButton
            android:id="@+id/celsiusRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:checked="true"
            android:layoutDirection="rtl"
            android:text="@string/celsius"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"/>

        <RadioButton
            android:id="@+id/fahrenheitRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:text="@string/fahrenheit"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"/>

        <RadioButton
            android:id="@+id/kelvinRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:text="@string/kelvin"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/location_enabled"
        android:textColor="#FFFFFF"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="#c0c0c0"/>
    <Button
        android:id="@+id/locationEnabledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on"/>
</LinearLayout>